--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,40 @@
-.box {
+/*.box {
     height: 450px;
     width: 40%;
     background-color: bisque;
 }
+*/
+h1 {
+    margin-top: 100px;
+    text-align: center;
+}
 
+ul{
+    padding: 0;
+    margin-bottom: 0;
+}
+li {
+    display: flex;
+}
+
+.listItems {
+    width: 97%;
+}
 ul li {
+    border: 1px solid grey;
     list-style: none;
+    padding: 5px;
+}
+
+input {
+    width: 100%;
+    border: none;
+}
+
+button {
+    border: none;
+    color: rgb(63, 63, 63);
+    background-color: white;
 }
 /* 
 
